[package]
name = "urlshorteners"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
async-trait = "0.1.57"
regex = "1.6.0"
once_cell = "1.13.0"
url = "2.2.2"
